--- a/LMS/Areas/Teachers/Views/Announcement/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Announcement/Index.cshtml
@@ -54,7 +54,7 @@
                                                     <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
                                                 </a>
 
-                                                <a href="#deleteClassModal" class="delete" id="delete" data-toggle="modal">
+                                                <a href="#deleteAnnouncementModal" class="delete" id="delete" data-toggle="modal">
                                                     <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
                                                 </a>
 
@@ -82,15 +82,15 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-md-4 pr-1">
+                                            <div class="col-md-6 pr-1">
                                                 <div class="form-group">
                                                     <label>Class</label>
                                                     <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes">
-                                                    <option value="0">--Select--</option>
+                                                        <option value="0">--Select--</option>
                                                     </select>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4 pl-1">
+                                            <div class="col-md-6 pl-1">
                                                 <div class="form-group">
                                                     <label>Section</label>
                                                     <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections">
@@ -98,7 +98,17 @@
                                                     </select>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4 pl-1">
+                                            
+                                        </div>
+                                        <div class="row">
+                                            
+                                            <div class="col-md-6 pl-1">
+                                                <div class="form-group">
+                                                    <label>Announcement Date</label>
+                                                    <input class="form-control" type="date" data-val="true" data-val-required="The Date field is required." id="Announcement_Date" name="Announcement_Date" value="">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 pl-1">
                                                 <div class="form-group">
                                                     <label>Subject</label>
                                                     <select id="Subject_Id" name="Subject_Id" class="form-control" asp-for="Subject_Id" asp-items="@Model.Subjects">
@@ -114,7 +124,7 @@
                                                     <textarea name="Announcement_Detail" class="form-control" style="border: 1px solid #174876; border-radius: .25rem;"></textarea>
                                                 </div>
                                             </div>
-                                                
+
                                         </div>
 
                                     </div>
@@ -132,14 +142,14 @@
                     <div id="editAnnouncementModal" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form method="post" asp-controller="announcement" asp-action="editClass">
+                                <form method="post" asp-controller="announcement" asp-action="editAnnouncement">
                                     <div class="modal-header">
                                         <h4 class="modal-title">Edit Announcement</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                     </div>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-md-4 pr-1">
+                                            <div class="col-md-6 pr-1">
                                                 <div class="form-group">
                                                     <label>Class</label>
                                                     <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes">
@@ -147,7 +157,7 @@
                                                     </select>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4 pl-1">
+                                            <div class="col-md-6 pl-1">
                                                 <div class="form-group">
                                                     <label>Section</label>
                                                     <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections">
@@ -155,7 +165,17 @@
                                                     </select>
                                                 </div>
                                             </div>
-                                            <div class="col-md-4 pl-1">
+
+                                        </div>
+                                        <div class="row">
+
+                                            <div class="col-md-6 pl-1">
+                                                <div class="form-group">
+                                                    <label>Announcement Date</label>
+                                                    <input class="form-control" type="date" data-val="true" data-val-required="The Date field is required." id="Announcement_Date" name="Announcement_Date" value="">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 pl-1">
                                                 <div class="form-group">
                                                     <label>Subject</label>
                                                     <select id="Subject_Id" name="Subject_Id" class="form-control" asp-for="Subject_Id" asp-items="@Model.Subjects">
@@ -168,7 +188,7 @@
                                             <div class="col-md-12 pl-1">
                                                 <div class="form-group">
                                                     <label>Announcement Detail</label>
-                                                    <textarea name="Announcement_Detail" class="form-control" style="border: 1px solid #174876; border-radius: .25rem;"></textarea>
+                                                    <textarea name="Announcement_Detail" id="Announcement_Detail" class="form-control" style="border: 1px solid #174876; border-radius: .25rem;"></textarea>
                                                 </div>
                                             </div>
 
@@ -179,7 +199,7 @@
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
                                         <input type="submit" class="btn btn-info" value="Save">
                                         @*Added By Absar*@
-                                        <input type="hidden" name="Class_Id" id="Class_Id" />
+                                        <input type="hidden" name="Announcement_Id" id="Announcement_Id" />
                                     </div>
                                 </form>
                             </div>
@@ -188,12 +208,12 @@
 
 
                     <!-- Delete Modal HTML -->
-                    <div id="deleteClassModal" class="modal fade">
+                    <div id="deleteAnnouncementModal" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form method="post" asp-controller="class" asp-action="deleteClass">
+                                <form method="post" asp-controller="announcement" asp-action="deleteAnnouncement">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Delete Class</h4>
+                                        <h4 class="modal-title">Delete Announcement</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                     </div>
                                     <div class="modal-body">
@@ -205,7 +225,7 @@
                                         <input type="submit" class="btn btn-danger" value="Delete">
 
                                         @*//Added By Absar To Pass Parameter to action method*@
-                                        <input type="hidden" id="Class_Id" name="Class_Id" />
+                                        <input type="hidden" id="Announcement_Id" name="Announcement_Id" />
 
                                     </div>
                                 </form>
@@ -282,6 +302,41 @@
 
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
+
+
+        //Get ClassSection_Id for Delete Added By Absar
+        $('#announcementPage #delete').on('click', function () {
+            var Announcement_Id = $(this).parent().find('.Announcement_Id').val();
+            $('#deleteAnnouncementModal #Announcement_Id').val(Announcement_Id);
+        });
+
+        //Get ClassSection_Id for Edit Added By Absar
+        $('#announcementPage #edit').on('click', function () {
+            var id = $(this).parent().find('.Announcement_Id').val();
+            $.ajax({
+
+                type: 'GET',
+                url: '/teachers/announcement/editAnnouncement/' + id,
+                success: function (objAnnouncement) {
+
+                    debugger;
+
+                    $('#editAnnouncementModal #Announcement_Id').val(objAnnouncement.announcement_Id);
+                    $('#editAnnouncementModal #Announcement_Detail').val(objAnnouncement.announcement_Detail);
+
+                    var announcement_date = objAnnouncement.announcement_Date;
+                    //session_date = session_date.match(/(\d{4})(\d{2})(\d{2})/g).join("-");
+                    announcement_date = announcement_date.replace(/(\d{4})(\d{2})(\d{2})/g, '$1-$2-$3')
+                    $('#editAnnouncementModal #Announcement_Date').val(announcement_date);
+
+
+                    $('#editAnnouncementModal #Class_Id').val(objAnnouncement.class_Id);
+                    $('#editAnnouncementModal #Section_Id').val(objAnnouncement.section_Id);
+                    $('#editAnnouncementModal #Subject_Id').val(objAnnouncement.subject_Id);
+
+                }
+            });
+        });
 
 
         $('#announcementPage').DataTable();
