--- a/LMS/Areas/Teachers/Views/Attendance/Session.cshtml
+++ b/LMS/Areas/Teachers/Views/Attendance/Session.cshtml
@@ -68,11 +68,11 @@
                                         </td>
                                         <td>
                                             <a href="#editSessionModal" class="edit" id="edit" data-toggle="modal">
-                                                <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
+                                                <i class="material-icons" title="" data-original-title="Edit"></i>
                                             </a>
 
                                             <a href="#deleteSessionModal" class="delete" id="delete" data-toggle="modal">
-                                                <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
+                                                <i class="material-icons" title="" data-original-title="Delete"></i>
                                             </a>
 
                                             @*Added BY Absar To get parentid*@
