--- a/LMS/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml
+++ b/LMS/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml
@@ -48,8 +48,8 @@
     <div class="wrapper ">
         <div class="sidebar" data-color="orange">
             <!--
-        Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-    -->
+                Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
+            -->
             <div class="logo">
                 <a href="#" class="">
                     <img src="/Dashboard/assets/img/logo-new_03.png" alt="" class="main-logo">
@@ -59,7 +59,7 @@
             </div>
             @*View Component For Teacher Panel Side Bar Added By Absar*@
             @await Component.InvokeAsync("TPSidebar")
-            
+
         </div>
         <div class="main-panel" id="main-panel">
 
@@ -154,6 +154,7 @@
     @*Jquery Data Table*@
     @* <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>*@
     @*<script src="~/Dashboard/assets/jqueryDataTable/bootstrap.min.js"></script>*@
+
     <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
 
     @*<script src="~/Dashboard/assets/datatables.net/js/jquery.dataTables.min.js"></script>
@@ -161,6 +162,9 @@
     <!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
     @*<script src="~/Dashboard/assets/demo/demo.js"></script>*@
 
+
+    @*For Date Picker*@
+    
 
     <script>
         $(document).ready(function () {
