--- a/LMS/Areas/Students/Views/Test/AttemptTest.cshtml
+++ b/LMS/Areas/Students/Views/Test/AttemptTest.cshtml
@@ -2,157 +2,168 @@
 @inject IJsonHelper Json;
 @{
     ViewData["Title"] = "AttemptTest";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Students/Views/Shared/_Studentayout.cshtml";
 }
 
 <style>
-  /* The container */
-.container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+    /* The container */
+    .container {
+        display: block;
+        position: relative;
+        padding-left: 35px;
+        margin-bottom: 12px;
+        cursor: pointer;
+        font-size: 22px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
 
-/* Hide the browser's default radio button */
-.container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
+        /* Hide the browser's default radio button */
+        .container input {
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+        }
 
-/* Create a custom radio button */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 50%;
-}
+    /* Create a custom radio button */
+    .checkmark {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        background-color: #eee;
+        border-radius: 50%;
+    }
 
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-  background-color: #ccc;
-}
+    /* On mouse-over, add a grey background color */
+    .container:hover input ~ .checkmark {
+        background-color: #ccc;
+    }
 
-/* When the radio button is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
+    /* When the radio button is checked, add a blue background */
+    .container input:checked ~ .checkmark {
+        background-color: #2196F3;
+    }
 
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
+    /* Create the indicator (the dot/circle - hidden when not checked) */
+    .checkmark:after {
+        content: "";
+        position: absolute;
+        display: none;
+    }
 
-/* Show the indicator (dot/circle) when checked */
-.container input:checked ~ .checkmark:after {
-  display: block;
-}
+    /* Show the indicator (dot/circle) when checked */
+    .container input:checked ~ .checkmark:after {
+        display: block;
+    }
 
-/* Style the indicator (dot/circle) */
-.container .checkmark:after {
- 	top: 9px;
-	left: 9px;
-	width: 8px;
-	height: 8px;
-	border-radius: 50%;
-	background: white;
-}
+    /* Style the indicator (dot/circle) */
+    .container .checkmark:after {
+        top: 9px;
+        left: 9px;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background: white;
+    }
 </style>
-<div class="dashboard" id="dashboard">
 
-    <div class="panel-header panel-header-sm">
-    </div>
-    <div class="content">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="title">Add Answer(s)</h5>
-                    </div>
-                    <div class="card-body">
-                        <form enctype="multipart/form-data">
-                            <div id="divQuestions">
-                                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-                                <script type='text/javascript'>
-                                    $.getScript("/js/StudentTest.js")
-                                        .done(function (script, textStatus) {
-                                            @foreach (var item in Model.Select((value, i) => new { i, value }))
-                                            {
-                                                @:$('#divQuestions').append(generateQuestions('@item.value.Test_Type_Id', '@item.value.Question_Name', '@item.i', '@Html.Raw(Json.Serialize(item.value))', '@item.value.Question_Id'));
-                                            }
-                                        })
-                                        .fail(function (jqxhr, settings, exception) {
-                                            console.log('failed to load script');
-                                        });
-                                </script>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <button id="btnSubmit" class="btn btn-primary btn-block" type="button">Submit</button>
-                                    </div>
+
+<div class="panel-header panel-header-sm">
+</div>
+<div class="content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="title">Submit Answer(s)</h5>
+                </div>
+                <div class="card-body">
+                    <form enctype="multipart/form-data">
+                        <div id="divQuestions">
+                            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                            <script type='text/javascript'>
+                                $.getScript("/js/StudentTest.js")
+                                    .done(function (script, textStatus) {
+                                        @foreach (var item in Model.Select((value, i) => new { i, value }))
+                                        {
+                                            @:$('#divQuestions').append(generateQuestions('@item.value.Test_Type_Id', '@item.value.Question_Name', '@item.i', '@Html.Raw(Json.Serialize(item.value))', '@item.value.Question_Id'));
+                                        }
+                                    })
+                                    .fail(function (jqxhr, settings, exception) {
+                                        console.log('failed to load script');
+                                    });
+                            </script>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <button id="btnSubmit" class="btn btn-primary btn-block" type="button">Submit</button>
                                 </div>
                             </div>
-                            @{
-                                TempData["TestId"] = ViewBag.TestId;
-                            }
-                        </form>
-                    </div>
+                        </div>
+                        @{
+                            TempData["TestId"] = ViewBag.TestId;
+                        }
+                    </form>
                 </div>
             </div>
+        </div>
 
+    </div>
+</div>
+<footer class="footer">
+    <div class=" container-fluid ">
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://www.creative-tim.com">
+                        Karachi Grammar School
+                    </a>
+                </li>
+                <li>
+                    <a href="http://presentation.creative-tim.com">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="http://blog.creative-tim.com">
+                        Blog
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="copyright" id="copyright">
+            &copy;
+            <script>
+                document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+            </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
         </div>
     </div>
-    <footer class="footer">
-        <div class=" container-fluid ">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://presentation.creative-tim.com">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright" id="copyright">
-                &copy;
-                <script>
-                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-            </div>
-        </div>
-    </footer>
-</div>
+</footer>
+
 
 <!--   Core JS Files   -->
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
+<link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
+<script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
 <script>
     var data = new FormData();
 
     $(document).ready(function () {
+
+        toastr.options = {
+            "positionClass": "toast-top-center",
+            "showDuration": "5000",
+            "hideDuration": "5000",
+            "timeOut": "5000",
+            "extendedTimeOut": "5000",
+        };
+
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
@@ -179,20 +190,20 @@
 
     function generateMultipleTextControl(obj, i) {
         let filteredNames = filtered_keys(JSON.parse(obj), /Option/i );
-        var content = `<div  id="qa` + (parseInt(i, 10) + 1) + `" class="row"><div class="col-md-6">`;
+        var content = `<div  id="qa` + (parseInt(i, 10) + 1) + `" class="row"><div class="col-md-6" style="padding-left:40px;">`;
         for (var i = 0; i < filteredNames.length; i++) {
-             content += `<label class="container" style="color: #2c2c2c">` + filteredNames[i] + `<input type="radio" name="radio" value=` + filteredNames[i] + `><span class="checkmark"></span></label>`
+            content += `<label class="container" style="color: #2c2c2c">` + filteredNames[i] + `<input type="radio" id="radAnswer" name="radio" value=` + filteredNames[i] + `><span class="checkmark"></span></label>`
         }
         content += `</div></div>`
         return content;
     }
 
     function generateTextControl(i, typeId) {
-        return `<div class="row"><div  id="qa` + (parseInt(i, 10) + 1) + `" class="col-md-6"><textarea style="width:100%;" cols="2" rows="10"></textarea></div><div class="col-md-3"><div class="form-group"><label>Answer Type</label>` + buildSelect(typeId) + `</div></div></div>`;
+        return `<div class="row"><div  id="qa` + (parseInt(i, 10) + 1) + `" class="col-md-6" style="padding-left:40px;"><textarea style="width:100%;" cols="2" rows="10"></textarea></div><div class="col-md-3"><div class="form-group"><label>Answer Type</label>` + buildSelect(typeId) + `</div></div></div>`;
     }
 
     function generateFileControl(i, typeId) {
-        return `<div class="row"><div  id="qa` + (parseInt(i, 10) + 1) + `" class="col-md-6"><input type="file" class="form-control"/></div><div class="col-md-3"><div class="form-group"><label>Answer Type</label>` +  buildSelect(typeId)  + `</div></div></div>`;
+        return `<div class="row"><div  id="qa` + (parseInt(i, 10) + 1) + `" class="col-md-6" style="padding-left:40px;"><input type="file" class="form-control"/></div><div class="col-md-3"><div class="form-group"><label>Answer Type</label>` +  buildSelect(typeId)  + `</div></div></div>`;
     }
 
     function buildSelect(value) {
@@ -235,7 +246,7 @@
         var answerObj = {};
 
         $('#divQuestions').find(".questionObj").each(function () {
-            debugger;
+            //debugger;
             var inputs = $(this).find('input');
 
             var selects = $(this).find('select');
@@ -289,16 +300,16 @@
                 data: data,
                 success: function Success(response) {
                     debugger;
-                    if (response.d == "1") {
-                        toastr.success('Data successfully saved', 'Success')
+                    if (response == 1) {
+                        window.location.href = "/students/test/index";
                     }
                     else {
-                        toastr.error('Failed to Save Data', 'Error!')
+                        toastr.error('Failed to Submit Assessment', 'Error!')
                     }
                 },
                 error: function (msg) {
-                    debugger;
-                    toastr.error('Failed to Save Data', 'Error!')
+                    //debugger;
+                    toastr.error('Failed to Submit Assessment', 'Error!')
                 }
             });
 
