--- a/LMS/Areas/Students/Views/Test/Index.cshtml
+++ b/LMS/Areas/Students/Views/Test/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<LMS.Domain.ViewModels.StudentTestViewModel>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Students/Views/Shared/_Studentayout.cshtml"; ;
 }
 
 <div class="panel-header panel-header-sm">
@@ -24,19 +24,23 @@
                             <table id="test" class="display" style="width:100%">
                                 <thead>
                                     <tr>
+                                        <th>Assessment Name</th>
                                         <th>Class</th>
                                         <th>Section</th>
                                         <th>Subject</th>
-                                        <th>Test</th>
+                                        <th>Assessment Date</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
                                     <tr>
+                                        <td>@item.Test_Name</td>
                                         <td>@item.Class_Name</td>
                                         <td>@item.Section_Name</td>
                                         <td>@item.Subject_Name</td>
+                                        <td>@item.Assessment_Date.ToShortDateString()</td>
                                         <td><a asp-action="AttemptTest" asp-controller="Test" asp-route-id="@item.Test_Id" class="btn btn-primary btn-sm">Attempt Test</a></td>
                                     </tr>
                                     }
@@ -107,13 +111,13 @@
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
+        $('#test').DataTable();
 
+        //$('#question #delete').on('click', function () {
+        //    var Question_Id = $(this).parent().find('.Question_Id').val();
 
-        $('#question #delete').on('click', function () {
-            var Question_Id = $(this).parent().find('.Question_Id').val();
-
-            $('#deleteQuestionModal #Question_Id').val(Question_Id);
-        });
+        //    $('#deleteQuestionModal #Question_Id').val(Question_Id);
+        //});
 
     });
 </script>
